# ferrokrait

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  utils.rs
src/builtin_types/: color.rs  input.rs  mod.rs  traits.rs  vec2.rs  vec3.rs  vec4.rs
src/nodetree/: mod.rs  node.rs
src/nodetree/node/builtin_nodes/: mod.rs  node2d.rs
tests/: input.py  test.py
